# libgroupsig

cmake_modules/: mcl.cmake
src/groupsig/: CMakeLists.txt  groupsig.c
src/groupsig/ksap23/: CMakeLists.txt  gml.c  gml.h  grp_key.c  grp_key.h  join_mem.c  join_mgr.c  judge.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  nizk.c  nizk.h  open.c  proof.c  proof.h  setup.c  sign.c  signature.c  signature.h  verify.c
src/include/: gml_handles.h  grp_key_handles.h  ksap23.h  mem_key_handles.h  mgr_key_handles.h  proof_handles.h  registered_groupsigs.h  signature_handles.h
src/misc/: profile.c
src/sys/: sysenv.c
